fix scroller weird behaviour + make usernames more visible

--- a/src/renderer/assets/styles.css
+++ b/src/renderer/assets/styles.css
@@ -261,9 +261,7 @@ img[src$="#custom_marker"]{
   overflow: hidden;
   text-overflow: ellipsis;
   font-size: 15px;
-  text-shadow:
-    rgb(0 0 0) 1px 1px 0px,
-    rgb(255 255 255) 1px 1px 3px;
+  text-shadow: 1px 0 1px #fff;
 }
 .gm-style-iw-d .username {
   font-size: 16px;
